--- a/Shop.Web/Shop.Web.csproj
+++ b/Shop.Web/Shop.Web.csproj
@@ -1,9 +1,59 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="wwwroot\node_modules\bootstrap-datepicker\**" />
+    <Compile Remove="wwwroot\node_modules\bootstrap4-datetimepicker\**" />
+    <Content Remove="wwwroot\node_modules\bootstrap-datepicker\**" />
+    <Content Remove="wwwroot\node_modules\bootstrap4-datetimepicker\**" />
+    <EmbeddedResource Remove="wwwroot\node_modules\bootstrap-datepicker\**" />
+    <EmbeddedResource Remove="wwwroot\node_modules\bootstrap4-datetimepicker\**" />
+    <None Remove="wwwroot\node_modules\bootstrap-datepicker\**" />
+    <None Remove="wwwroot\node_modules\bootstrap4-datetimepicker\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="wwwroot\js\JavaScript.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\all.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\all.min.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\brands.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\brands.min.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\fa-brands.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\fa-brands.min.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\fa-regular.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\fa-regular.min.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\fa-solid.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\fa-solid.min.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\fontawesome-all.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\fontawesome-all.min.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\fontawesome.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\fontawesome.min.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\regular.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\regular.min.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\solid.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\solid.min.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\svg-with-js.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\svg-with-js.min.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\v4-shims.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\css\v4-shims.min.css" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\package.json" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\webfonts\fa-brands-400.eot" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\webfonts\fa-brands-400.ttf" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\webfonts\fa-brands-400.woff" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\webfonts\fa-regular-400.eot" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\webfonts\fa-regular-400.ttf" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\webfonts\fa-regular-400.woff" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\webfonts\fa-solid-900.eot" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\webfonts\fa-solid-900.ttf" />
+    <Content Include="wwwroot\node_modules\font-awesome-5-css\webfonts\fa-solid-900.woff" />
+  </ItemGroup>
 
 
   <ItemGroup>
@@ -15,6 +65,60 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\images\Products\" />
+    <Folder Include="wwwroot\Asset\" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <None Include="wwwroot\node_modules\font-awesome-5-css\js\fontawesome-all.js" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\brands.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\fa-brands.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\fa-regular.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\fa-solid.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\fontawesome.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\regular.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\solid.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\v4-shims.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\_animated.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\_bordered-pulled.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\_core.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\_fixed-width.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\_icons.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\_larger.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\_list.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\_mixins.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\_rotated-flipped.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\_screen-reader.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\_shims.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\_stacked.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\less\_variables.less" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\brands.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\fa-brands.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\fa-regular.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\fa-solid.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\fontawesome.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\regular.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\solid.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\v4-shims.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\_animated.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\_bordered-pulled.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\_core.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\_fixed-width.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\_icons.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\_larger.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\_list.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\_mixins.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\_rotated-flipped.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\_screen-reader.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\_shims.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\_stacked.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\scss\_variables.scss" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\webfonts\fa-brands-400.svg" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\webfonts\fa-brands-400.woff2" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\webfonts\fa-regular-400.svg" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\webfonts\fa-regular-400.woff2" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\webfonts\fa-solid-900.svg" />
+    <None Include="wwwroot\node_modules\font-awesome-5-css\webfonts\fa-solid-900.woff2" />
   </ItemGroup>
 
 </Project>
