Implement JQuery Datablables script in Products index View

--- a/Shop.Web/appsettings.json
+++ b/Shop.Web/appsettings.json
@@ -12,6 +12,13 @@
     "Key": "asdfghjikbnvcgfdsrtfyhfvdsdvsdgcvgfxdgc",
     "Issuer": "localhost",
     "Audience": "users"
+  },
+  "Mail": {
+    "From": "farney9@gmail.com",
+    "Smtp": "smtp.gmail.com",
+    "Port": 587,
+    "Password": "%%Emi2408"
   }
+
 
 }
